--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // Body
 $body-bg: rgb(0, 0, 0);
 
@@ -7,8 +6,7 @@ $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-
-// 
+//
 $grey-darkest: rgb(0, 0, 0);
 $grey-darker: rgb(11, 11, 11);
 $grey-dark: rgb(18, 18, 18);
@@ -21,11 +19,11 @@ $primary-text: rgb(255, 255, 255);
 
 // Colors
 $primary-color: #ffffff;
-$secondary-color: rgb(231,185,23);
+$secondary-color: rgb(231, 185, 23);
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
-$pink: #f66D9b;
+$pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
@@ -38,5 +36,5 @@ $breakpoint-larger: 1200px;
 $breakpoint-large: 1000px;
 $breakpoint-medium: 768px;
 $breakpoint-small: 414px;
-$breakpoint-smaller: 375px; 
+$breakpoint-smaller: 375px;
 $breakpoint-smallest: 320px;
