Correct $primary-color variable.

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,8 +18,8 @@ $grey-lightest: rgb(219, 219, 219);
 $primary-text: rgb(255, 255, 255);
 
 // Colors
-$primary-color: #ffffff;
-$secondary-color: rgb(231, 185, 23);
+$primary-color: rgb(231, 185, 23);
+$secondary-color: #f66d9b;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
