--- a/src/sass/movie-list.scss
+++ b/src/sass/movie-list.scss
@@ -73,7 +73,7 @@ ul.movie-list {
 
       a {
         text-transform: capitalize;
-        color: $secondary-color;
+        color: $primary-color;
         z-index: 10;
       }
 
@@ -136,7 +136,7 @@ ul.movie-list {
 
     .saved {
       color: $grey-dark;
-      background-color: $secondary-color;
+      background-color: $primary-color;
     }
   }
 }
