--- a/src/sass/movie-list.scss
+++ b/src/sass/movie-list.scss
@@ -123,7 +123,7 @@ ul.movie-list {
       color: $grey-darkest;
       font-weight: 700;
       // margin-top: 15px;
-      background-color: $grey-dark;
+      background-color: $grey;
       // background-color: transparent;
       // padding: 6px;
       width: 30px;
