--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,7 +12,7 @@ $grey-darker: rgb(11, 11, 11);
 $grey-dark: rgb(18, 18, 18);
 $grey: rgb(48, 48, 48);
 $grey-light: rgb(18, 18, 18);
-$grey-lighter: rgb(18, 18, 18);
+$grey-lighter: rgb(170, 169, 169);
 $grey-lightest: rgb(219, 219, 219);
 
 $primary-text: rgb(255, 255, 255);
@@ -38,3 +38,5 @@ $breakpoint-medium: 768px;
 $breakpoint-small: 414px;
 $breakpoint-smaller: 375px;
 $breakpoint-smallest: 320px;
+
+$main-nav-width-not-exanded: 5rem;
