--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -107,7 +107,7 @@ li {
 
 @media only screen and (min-width: $breakpoint-large) {
   .content {
-    width: calc(100% - $main-nav-width-not-exanded);
-    margin-left: $main-nav-width-not-exanded;
+    width: calc(100% - #{$main-nav-width-not-expanded});
+    margin-left: $main-nav-width-not-expanded;
   }
 }
